frontend/src/index.css
body {
  margin: 0;
  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
    sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

code {
  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
    monospace;
}

img.card {
  border-top-left-radius: 4.75% 3.5%;
  border-top-right-radius: 4.75% 3.5%;
  border-bottom-right-radius: 4.75% 3.5%;
  border-bottom-left-radius: 4.75% 3.5%;
}

